# GLenoEngine

./: .gitignore  CMakeLists.txt  OpenglApiQuickDescription.md  README.md
documentation/code/: index.html
documentation/code/src/utilz/math/objects/perspectiveMatrix/: perspectiveMatrix.html
examples/: CMakeLists.txt  cppPractice.cpp  maintest.cpp  modernOpenglLearn.cpp  openglLearn.cpp
include/: CMakeLists.txt
include/core/engine/enums/: modelEnums.h  renderEnums.h
include/core/engine/objects/: entityGroup.h
include/core/engine/objects/model/: modelCreatorApi.h  modelGroup.h
include/core/engine/render/holder/: renderDataHolder.h
include/core/engine/render/renderEngine/: renderController.h
include/core/gl/enums/: glenums.h
include/core/gl/shader/: shaderProgram.h  uniformHolder.h
include/core/gl/vbo&vao/: vaoVbo.h
include/core/window/: window.h
include/utilz/io/: fileReaders.h
include/utilz/math/algebra/linear_functions/: transformation_matrices.h
include/utilz/math/algebra/objects/: matrix.h  quaternion.h  vector.h
include/utilz/math/enums/: linearAlgebraEnums.h
include/utilz/math/linear_algebra/: matrix.h  vector.h
include/utilz/math/linear_algebra/linear_functions/: transformation_matrices.h
include/utilz/math/linear_algebra/objects/: matrix.h
properties/: engine_properties.yaml
resources/shaders/basic/: basicShader.frag  basicShader.vert
src/: CMakeLists.txt  main.cpp
src/core/gl/enums/: glenums.cpp
src/core/gl/shader/: shaderProgram.cpp
src/core/gl/vbo&vao/: vaoVbo.cpp
src/core/window/: window.cpp
src/engine/objects/: entityGroup.cpp
src/engine/render/enums/: renderEnums.cpp
src/engine/render/renderEngine/: renderController.cpp
src/utilz/io/: fileReaders.cpp
src/utilz/math/algebra/linear_functions/: transformation_matrices.cpp
src/utilz/math/algebra/objects/: quaternion.cpp
src/utilz/math/linear_functions/: transformation_matrices.cpp
tests/: CMakeLists.txt  buildproject_test.cpp  coreTestHeader.h
tests/engine/objects/: entity_group_test.cpp  model_group_test.cpp
tests/engine/render/: render_data_holder_test.cpp
tests/opengl_tests/: performance_test.cpp  shader_tests.cpp  vao_render_tests.cpp
tests/utilz_tests/: math_tests.cpp
